arion-proxy/conf/arion-runtime-jwt.yaml
#                                       /proxy/    ---> (cluster1) 192.168.2.10:80
#                                      |
#  http request ---> 192.168.1.1:8080 -|
#                                      |
#                                       (default)  ---> (cluster2) 127.0.0.1:80
#
#                                       /proxy/    ---> (cluster3) 192.168.2.10:81 (h2)
#                                      |
#  http request ---> 192.168.1.1:8081 -|
#                                      |
#                                      / 404
#

runtime:
  num_cpus: 2
  num_runtimes: 2
  event_interval: 31          # estimated optimal value
  global_queue_interval: null   # default
  max_io_events_per_tick: null  # default

logging:
  log_level: "debug"
#  log_directory: "."
#  log_file: "arion.log"

envoy_bootstrap:
  static_resources:
    listeners:
      - name: listener_http
        address:
          socket_address: { address: 0.0.0.0, port_value: 8000 }
        filterChains:
          - name: filter_chain_http
            filter_chain_match:
              destination_port: 8000
            filters:
              - name: http_gateway
                typedConfig:
                  "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                  statPrefix: ingress_http
                  codecType: HTTP1
                  httpFilters:
                    - name: envoy.filters.http.jwt_authn
                      typed_config:
                           "@type": "type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication"
                           rules:
                              - match:
                                    prefix: "/"
                                requires:
                                    provider_name: oauth_provider
                           providers:
                               oauth_provider:
                                 from_headers:
                                   - name: Authorization
                                     value_prefix: "Bearer "
                                 #issuer: "https://auth.example.com"
                                 audiences: ["mcp-gateway"]
                                 local_jwks:
                                     inline_string: >-
                                         {"keys": [
                                             {
                                                 "kty": "RSA",
                                                 "e": "AQAB",
                                                 "use": "sig",
                                                 "kid": "sig-2025-12-12T15:52:22Z",
                                                 "alg": "RS256",
                                                 "n": "hi3pcXuRrhy2gHjkHCq6JBcxpeC5udojlLukmsyAZ7x1vHwHTx_9c6s73XhfJoRBnd3V3SL1JAUuBiVJ68Pnrtuztp5j8Cdw33S5jKf-8PranMucG_4wWejWm1gbKomZBm79Baf_fJkDOwumsTXvO9dgX7c2dHtA0oO15eVdzSDf7azgLU7OvVukiE71tqoQwnPgK47xDvjw83ZN8eWZzDPGpA9DVoEjhwOeasDgUdVv1L-b2uOqCMYcLixYJ58O48cQSEOreIi1FbIJGoT19VKtJ528JrTkKihZb-BmFIvyIu36lGRpeJ1pbarIMx-sC_-UfKEawHmYQp7MwB1dnQ"
                                             }
                                         ]}
                    - name: envoy.filters.http.router
                      typedConfig:
                        "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                        start_child_span: false
                  routeConfig:
                    name: basic_http_route
                    virtual_hosts:
                      - name: mcp_gateway
                        domains: ["*"]
                        routes:
                          - match:
                              prefix: "/"
                            route:
                              cluster: cluster_http

    clusters:
      - name: cluster_http
        connect_timeout: 0.25s
        type: STATIC
        lb_policy: ROUND_ROBIN
        load_assignment:
          endpoints:
            - lb_endpoints:
                - endpoint:
                    address:
                      socket_address:
                        address: 127.0.0.1
                        port_value: 4001
